test/fixtures/error/pages/index.vue
<template>
  <div>
    <h1>Error Loop incoming page</h1>
    <nuxt-link id="squared" to="/squared">
      Error during error
    </nuxt-link>
    <nuxt-link id="about" to="/about">
      About
    </nuxt-link>
    <nuxt-link id="info" to="/info">
      Info (with error)
    </nuxt-link>
  </div>
</template>
